[gd_scene load_steps=4 format=3 uid="uid://8ot1t54mh52d"]

[ext_resource type="Theme" uid="uid://cihevor2n4atf" path="res://assets/themes/pauseTheme.tres" id="1_mt6u4"]
[ext_resource type="FontFile" uid="uid://bryt2argemd3j" path="res://assets/fonts/PixelOperator8.ttf" id="2_go4lx"]
[ext_resource type="Script" path="res://scripts/UI/main_menu.gd" id="2_r5ycm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mt6u4")
script = ExtResource("2_r5ycm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.277545, 0.307639, 0.369814, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_go4lx")
theme_override_font_sizes/font_size = 32
text = "A GAME FOR THE GAMERS THAT GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_neighbor_top = NodePath("../QuitGameButton")
focus_neighbor_bottom = NodePath("../QuitGameButton")
focus_next = NodePath("../QuitGameButton")
focus_previous = NodePath("../QuitGameButton")
text = "START GAME
"

[node name="QuitGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 5
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../StartGameButton")
text = "QUIT"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
